--- a/pie/package.json
+++ b/pie/package.json
@@ -22,6 +22,7 @@
     "angular-aria": "^1.5.5",
     "angular-messages": "^1.5.5",
     "angular-route": "^1.5.5",
+    "angular-resource": "^1.5.5",
     "angular-material": "^1.1.0"
   },
   "devDependencies": {
