--- a/pie/package.json
+++ b/pie/package.json
@@ -23,7 +23,9 @@
     "angular-messages": "^1.5.5",
     "angular-route": "^1.5.5",
     "angular-resource": "^1.5.5",
-    "angular-material": "^1.1.0"
+    "angular-material": "^1.1.0",
+    "angular-chart.js": "^1.1.1",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.9",
