--- a/multimedia/package.json
+++ b/multimedia/package.json
@@ -25,7 +25,8 @@
     "angular-resource": "^1.5.5",
     "angular-material": "^1.1.0",
     "angular-chart.js": "^1.1.1",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "photoswipe": "~4.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.9",
