--- a/multimedia/package.json
+++ b/multimedia/package.json
@@ -26,7 +26,8 @@
     "angular-material": "^1.1.0",
     "angular-chart.js": "^1.1.1",
     "lodash": "^4.17.4",
-    "photoswipe": "~4.1.0"
+    "photoswipe": "~4.1.0",
+    "angular-audio-player-html5-es6":"^2.2.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.9",
